put a span. green is now green

--- a/test.html
+++ b/test.html
@@ -1,2 +1,2 @@
 <h1>My First Website</h1>
-<p>My Favourite Colour is Green</p>
+<p>My Favourite Colour is <span style="color: chartreuse;">green</span></p>
